crates/type_checker/src/tests/snapshots/array_index_2.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 653
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nx[1 + 2]\n"
- Ok:
    nodes:
      - node:
          Let:
            name: x
            antn:
              Array:
                - Int32
                - 3
            init:
              node:
                Lit:
                  value:
                    Array:
                      elements:
                        - node:
                            Lit:
                              value:
                                Int32: 1
                          ty: Int32
                        - node:
                            Lit:
                              value:
                                Int32: 2
                          ty: Int32
                        - node:
                            Lit:
                              value:
                                Int32: 3
                          ty: Int32
                      inner_ty: Int32
              ty:
                Array:
                  - Int32
                  - 3
        ty: ~
      - node:
          Index:
            binding:
              node:
                Ident:
                  name: x
              ty:
                Array:
                  - Int32
                  - 3
            idx:
              node:
                BinOp:
                  op: Add
                  lhs:
                    node:
                      Lit:
                        value:
                          Int32: 1
                    ty: Int32
                  rhs:
                    node:
                      Lit:
                        value:
                          Int32: 2
                    ty: Int32
              ty: Int32
        ty: Int32

