crates/type_checker/src/tests/snapshots/array_index_3.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 653
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nlet y: int = 1\nx[y]\n"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              Array:
                - Int32
                - 3
            init:
              kind:
                Lit:
                  value:
                    Array:
                      elements:
                        - kind:
                            Lit:
                              value:
                                Int32: 1
                          ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 2
                          ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 3
                          ty: Int32
                      inner_ty: Int32
              ty:
                Array:
                  - Int32
                  - 3
        ty: ~
      - kind:
          Let:
            name: y
            antn: Int32
            init:
              kind:
                Lit:
                  value:
                    Int32: 1
              ty: Int32
        ty: ~
      - kind:
          Index:
            binding:
              kind:
                Ident:
                  name: x
              ty:
                Array:
                  - Int32
                  - 3
            idx:
              kind:
                Ident:
                  name: y
              ty: Int32
        ty: Int32

