crates/type_checker/src/tests/snapshots/array_type.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 653
expression: "(test[1], res)"
---
- "let x: [int; 3]"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              Array:
                - Int32
                - 3
            init:
              kind:
                Lit:
                  value:
                    Array:
                      elements: []
                      inner_ty: Int32
                  ty:
                    Array:
                      - Int32
                      - 3

