crates/type_checker/src/tests/snapshots/binop_bad_math_types.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 156
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    true + false\n}\n"
- Err: "Expected numeric type on either side of `+`, got lhs: `bool`, rhs: `bool`"

