crates/type_checker/src/tests/snapshots/binop_basic.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 156
expression: "(test[1], res)"
---
- "\nfn foo() {\n    1 + 2\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
            body:
              Block:
                list:
                  - Expr:
                      BinOp:
                        sym: Add
                        lhs:
                          Expr:
                            Lit:
                              value:
                                Int32: 1
                              ty: Int32
                        rhs:
                          Expr:
                            Lit:
                              value:
                                Int32: 2
                              ty: Int32
                        ty: Int32
                ty: Int32

