crates/type_checker/src/tests/snapshots/binop_basic_var.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let a: int = 1\n    a + 2\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: a
                          antn: Int32
                          init:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                            ty: Int32
                      ty: ~
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              Ident:
                                name: a
                            ty: Int32
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 2
                            ty: Int32
                      ty: Int32
              ty: Int32
        ty: ~

