crates/type_checker/src/tests/snapshots/binop_bool_ret.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn foo() -> bool {\n    2 == 1\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Bool
            body:
              Expr:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          op: Eq
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 2
                                ty: Int32
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          ty: Bool
                  ty: Bool

