crates/type_checker/src/tests/snapshots/binop_bools_cmp_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    true || false\n}\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - int
              ret_ty: void
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        BinOp:
                          op: Or
                          lhs:
                            node:
                              Lit:
                                value:
                                  Bool: true
                            ty: Bool
                          rhs:
                            node:
                              Lit:
                                value:
                                  Bool: false
                            ty: Bool
                      ty: Bool
              ty: Bool
        ty: ~

